<resources>
    <string name="app_name">Guaf!</string>
    <string name="title_activity_monitoreo">Monitoreo</string>
    <string name="title_activity_main_menu">MainMenu</string>
    <string name="title_activity_perfil">Perfil</string>
    <string name="guardar_cambios">Guardar Cambios</string>
    <string name="usuario">Usuario:</string>
    <string name="correo">Correo:</string>
    <string name="nombre">Nombre:</string>
    <string name="place_holder">Place Holder</string>
    <string name="cambio_de_contrase_a">Cambio de contraseña</string>
    <string name="contrase_a_actual">Contraseña actual:</string>
    <string name="contrase_a_nueva">Contraseña nueva:</string>
    <string name="placeholder">Placeholder</string>
    <string name="_0000">0000</string>
    <string name="_0000000">0000000</string>
    <string name="place_holder_com">place@holder.com</string>
</resources>
